--- a/src/BoardZ/app/components/games/list.html
+++ b/src/BoardZ/app/components/games/list.html
@@ -5,7 +5,7 @@
                 <h3 class="box-title">All Games</h3>
 
                 <div class="box-tools">
-                    <button class="btn btn-box-tool" (click)="openCreateGame()"><i class="fa fa-plus"></i> Add new
+                    <button class="btn btn-box-tool"><i class="fa fa-plus"></i> Add new
                         Game
                     </button>
                 </div>
@@ -19,9 +19,9 @@
                             <th>Description</th>
 
                         </tr>
-                        <tr *ngFor="#game of games" (click)="openGameDetails(game)" class="respond-click">
-                            <td>{{game.name}}</td>
-                            <td>{{game.description}}</td>
+                        <tr class="respond-click">
+                            <td>Sample Game Name</td>
+                            <td>Sample Game Description</td>
                         </tr>
                     </tbody>
                 </table>
